# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.1309 2010-08-19 13:36:46 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

3.0.0 beta2 2010-??-??
 - 2010-08-19 Fixed bug#5639 - Global Overview: No action on clicking a row in
    S/M/L view mode.
 - 2010-08-19 Fixed bug#5728 - Ticket history shows wrong date and time for agent
    actions "createtime" (actually shows user creation date).
 - 2010-08-19 Fixed bug#5727 - Ticket-Search-Results are not sortable.
 - 2010-08-19 Fixed bug#5611 - Company-Button has the same function als Ticket-Button.
 - 2010-08-19 Fixed bug#5760 - Adding a new ticket in the customer interface
    results in 2 tickets.
 - 2010-08-19 Fixed bug#5722 - Customer interface does not display error messages
    when creating a ticket.
 - 2010-08-18 Fixed bug#5662 - In Global Ticket Overview, in L-Mode, template
    support is missing in "Relpy" feature.
 - 2010-08-18 Fixed bug#5764 - No move option in S/M/L mode available.
 - 2010-08-18 Fixed bug#5725 - Missing lables for search-terms in customer interface.
 - 2010-08-17 Fixed bug#5598 - Address Book To: field does is not populated.
 - 2010-08-17 Fixed bug#5679 - In "New Ticket" in customer interface,
    selecting the queue automatically submits the ticket.
 - 2010-08-17 Fixed bug#5724 - Security leak: Edit HTML source code as customer.
 - 2010-08-17 Fixed bug#5682 - Collapse / expand for GenericAgent.
 - 2010-08-17 Fixed bug#5370 - the word "subscribe" ought to be changed to "watch".
 - 2010-08-17 Fixed bug#5742 - Outgoing email link detection does not work properly.
 - 2010-08-13 Fixed bug#5660 - In Global Ticket Overview, with IE7: S/M/L, character
    is not clickable, only hover area is clickable, fixed changing images for S/M/L letters.