@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.1309 2010-08-19 13:36:46 martin Exp $
+# $Id: CHANGES,v 1.1310 2010-08-19 15:34:09 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,8 @@
 # --
 
 3.0.0 beta2 2010-??-??
+ - 2010-08-19 Fixed bug#5768 - No tickets shown at CI if no any opened tickets
+    exist.
  - 2010-08-19 Fixed bug#5639 - Global Overview: No action on clicking a row in
     S/M/L view mode.
  - 2010-08-19 Fixed bug#5728 - Ticket history shows wrong date and time for agent
